--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "template-object",
+  "name": "email-template-object",
   "version": "0.1.0",
   "description": "factory method for printing strings",
   "main": "dist/index.cjs.js",
