--- a/package.json
+++ b/package.json
@@ -50,7 +50,8 @@
   },
   "dependencies": {
     "easy-factory": "^1.3.0",
-    "lodash": "^4.17.21"
+    "lodash": "^4.17.21",
+    "object-assign": "^4.1.1"
   },
   "optionalDependencies": {
     "fsevents": "*"
